# itchy-rust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  download_recent_itch50.sh
.github/workflows/: CI.yaml
src/: enums.rs  lib.rs
