[package]
name = "itchy"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
version = "0.2.2"
description = "Nom-based parser library for NASDAQ ITCH protocol"
repository = "https://github.com/adwhit/itchy-rust"
keywords = ["nasdaq", "itch", "nom"]
license = "MIT"
edition = "2018"

[dependencies]
arrayvec = { version = "0.5", features = ["serde"] }
decimal = "2.0"
error-chain = "0.12"
flate2 = "1.0"
nom = "4.2"
serde = { version = "1.0", features = ["derive"] }
